better hasher optm

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@
 /_ReSharper.Caches/
 /build/
 /cmake-build-debug/
+/cmake-build-debug-visual-studio/
+/cmake-build-debug-visual-studio-event-trace/
+/cmake-build-debug-clang/
