--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,6 @@
 [submodule "submodules/stb"]
 	path = submodules/stb
 	url = https://github.com/nothings/stb.git
+[submodule "submodules/tim_sort"]
+	path = submodules/tim_sort
+	url = https://github.com/timsort/cpp-TimSort.git
