--- a/prop/assets/shader/config.json
+++ b/prop/assets/shader/config.json
@@ -1,8 +1,12 @@
 {
   "shader_root": "./prop/assets/shader/slangs",
 
+  "include_dir": [
+    "lib/"
+  ],
+
   "common_options": [
-    "-O",
+    "-O2",
     "-fvk-use-gl-layout",
     "-matrix-layout-column-major"
   ],
@@ -15,7 +19,13 @@
       "file": "post_process/hdr_to_sdr.slang"
     },
     {
+      "file": "post_process/volume_pass.slang"
+    },
+    {
       "file": "post_process/highlight_extract.slang"
+    },
+    {
+      "file": "post_process/bloom.merge.slang"
     }
   ]
 }
