batch ubo slot update

--- a/prop/assets/shader/config.json
+++ b/prop/assets/shader/config.json
@@ -26,6 +26,10 @@
     },
     {
       "file": "post_process/bloom.merge.slang"
+    },
+    {
+      "file": "ui/draw.slang",
+      "alias": "ui/draw/basic"
     }
   ]
 }
