fence like instr impl

--- a/prop/assets/shader/config.json
+++ b/prop/assets/shader/config.json
@@ -30,6 +30,10 @@
     {
       "file": "ui/draw.slang",
       "alias": "ui/draw/basic"
+    },
+    {
+      "file": "ui/blit.default.slang",
+      "alias": "ui/blit/basic"
     }
   ]
 }
