--- a/prop/assets/shader/config.json
+++ b/prop/assets/shader/config.json
@@ -32,6 +32,11 @@
       "alias": "ui/draw/basic"
     },
     {
+      "file": "ui/draw.slang",
+      "alias": "ui/draw/sdf",
+      "options": ["-DMODE_SDF=1"]
+    },
+    {
       "file": "ui/blit.default.slang",
       "alias": "ui/blit/basic"
     }
